add user verify & contact
