# docs/swagger.json
@@ -5,7 +5,7 @@
     "swagger": "2.0",
     "info": {
         "description": "API Documentation",
-        "title": "GO Simple Store",
+        "title": "Go Simple Store",
         "version": "1.0.0"
     },
     "host": "apiumkm.kitadigi.com",
@@ -1431,6 +1431,174 @@
                 }
             }
         },
+        "/contacts": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List of Contact",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contact"
+                ],
+                "summary": "List of Contact",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number start from zero",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Size per page, default `0`",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort by field, adding dash (`-`) at the beginning means descending and vice versa",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Select specific fields with comma separated",
+                        "name": "fields",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "custom filters, see [more details](https://github.com/morkid/paginate#filter-format)",
+                        "name": "filters",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of Contact",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/lib.Page"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "items": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/model.Contact"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/contacts/": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update Contact by user id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contact"
+                ],
+                "summary": "Update Contact by user id",
+                "parameters": [
+                    {
+                        "description": "Contact data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ContactRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Contact data",
+                        "schema": {
+                            "$ref": "#/definitions/model.Contact"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/lib.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/info.json": {
             "get": {
                 "description": "show info response",
@@ -2404,6 +2572,63 @@
                 },
                 "zip_code": {
                     "description": "Zip Code",
+                    "type": "string",
+                    "example": "15414"
+                }
+            }
+        },
+        "model.ContactRequest": {
+            "type": "object",
+            "required": [
+                "contact_name"
+            ],
+            "properties": {
+                "address": {
+                    "description": "Address",
+                    "type": "string",
+                    "example": "Jl. Aria Putra No.88, RT.09/RW.01, Sawah Baru, Kec. Ciputat, Kota Tangerang Selatan, Banten 15414"
+                },
+                "alternate_number": {
+                    "description": "Alternate Number",
+                    "type": "string",
+                    "example": "08123456789"
+                },
+                "city_id": {
+                    "description": "City ID",
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "contact_name": {
+                    "description": "Contact Name                                                                                // Type",
+                    "type": "string",
+                    "example": "Walk-in-customers"
+                },
+                "email": {
+                    "description": "Email",
+                    "type": "string",
+                    "example": "walk-in-customer@mail.com"
+                },
+                "mobile": {
+                    "description": "Mobile",
+                    "type": "string",
+                    "example": "08123456789"
+                },
+                "province_id": {
+                    "description": "Province ID",
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "subdistrict_id": {
+                    "description": "Subdistrict ID",
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "website": {
+                    "description": "Website",
+                    "type": "string",
+                    "example": "www.walk-in-customer.com"
+                },
+                "zip_code": {
                     "type": "string",
                     "example": "15414"
                 }
